<resources>
    <string name="app_name">CipherBox</string>
    <string name="textview">TextView</string>
    <string name="button">Add Text Line</string>
    <string name="second_activity_button">Second Activity</string>
    <string name="useless_button">Useless Button</string>
    <string name="remove_useless_button">Remove Useless Button</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_view">\"Add\" View</string>
    <string name="show_list">Show List</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="filter_list">filter list</string>
    <string name="clear_text">Clear Text</string>
    <string name="cipher_text">Cipher Text</string>
    <string name="information">Information</string>
    <string name="send_request">Send Request</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="key">Key</string>
    <string name="share">Share</string>
    <string name="history">History</string>
</resources>
