<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <Button
            android:id="@+id/useless_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useless_button" />

        <Button
            android:id="@+id/remove_useless_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_useless_button" />

        <Button
            android:id="@+id/add_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_view" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />
    </LinearLayout>
</ScrollView>