<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/lab1addActivity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/lab1addActivity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description" />

    <ImageView
        android:id="@+id/lab1addActivity_img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/lab1addActivity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/lab1AddActivity_show_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_list" />
</LinearLayout>